--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-mbed-connector-api==1.0.1
-pybars==0.0.4
-Flask==0.10.1
-Flask-SocketIO==2.1
-requests==2.9.1
+gunicorn
+mbed-connector-api
+pybars
+Flask
+Flask-SocketIO
+requests
