adding requirements for workaround on Ubuntu LTS systems with out of data pip installs

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
+pip>=8.0.0
 mbed-connector-api>=1.0.1
 pybars>=0.0.4
 Flask>=0.10.1
 Flask-SocketIO>=2.1
-requests>=2.9.1
+requests[security]>=2.9.1
