--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 gunicorn
 eventlet
-mbed-connector-api
-pybars
-Flask
-Flask-SocketIO
-requests
+pip>=8.0.0
+mbed-connector-api>=1.0.1
+pybars>=0.0.4
+Flask>=0.10.1
+Flask-SocketIO>=2.1
+requests[security]>=2.9.1
